updated for deploy

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,4 @@
-quirements.txt
-asgiref
-certifi       
-charset-normalizer
-crispy-bootstrap5 
-distlib
 Django
-django-cors-headers
-django-crispy-forms
-django-filter
-djangorestframework
-EasyProcess
-entrypoint2
-filelock
-idna
-MouseInfo
-mss
-mysql-connector
-mysql-connector-python
 Pillow
-platformdirs
-protobuf
-PyAutoGUI
-PyGetWindow
-PyMsgBox
-pyperclip
-PyRect
-pyscreenshot
-PyScreeze
-pytweening
-pytz
-requests
-sqlparse
-sslcommerz-lib
-quirements.txt
-asgiref
-certifi        
-charset-normalizer
-crispy-bootstrap5  
-distlib
-Django
-django-cors-headers
 django-crispy-forms
-django-filter
-djangorestframework
-EasyProcess
-entrypoint2
-filelock
-idna
-MouseInfo
-mss
-mysql-connector
-mysql-connector-python
-Pillow
-platformdirs
-protobuf
-PyAutoGUI
-PyGetWindow
-PyMsgBox
-pyperclip
-PyRect
-pyscreenshot
-PyScreeze
-pytweening
-pytz
-requests
-sqlparse
-sslcommerz-lib
-tzdata
-urllib3
-virtualenv
-tzdata
-urllib3
-virtualenv
+crispy_bootstrap5
